--- a/package.json
+++ b/package.json
@@ -1,21 +1,24 @@
 {
-    "name": "bbc-raven",
-    "version": "2.1.1",
-    "main": "index.js",
-    "type": "module",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/bitfocus/companion-module-bbc-raven.git"
-    },
-    "license": "MIT",
-    "dependencies": {
-        "@companion-module/base": "~1.3.0",
-        "node-rest-client": "^3.1.0"
-    },
-    "devDependencies": {
-        "@companion-module/tools": "^1.2.0"
-    }
+	"name": "bbc-raven",
+	"version": "2.1.1",
+	"main": "index.js",
+	"type": "module",
+	"scripts": {
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"format": "prettier --write \"**/*.{js,json,md}\""
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/bitfocus/companion-module-bbc-raven.git"
+	},
+	"license": "MIT",
+	"prettier": "@companion-module/tools/.prettierrc.json",
+	"dependencies": {
+		"@companion-module/base": "~1.3.0",
+		"node-rest-client": "^3.1.0"
+	},
+	"devDependencies": {
+		"@companion-module/tools": "^1.2.0",
+		"prettier": "^3.5.3"
+	}
 }
